@@ -1,7 +1,9 @@
 package org.example.projectplanningapp.repositories;
 
-
+import org.example.projectplanningapp.models.Employee;
+import org.example.projectplanningapp.models.Status;
 import org.example.projectplanningapp.models.Task;
+import org.example.projectplanningapp.repositories.rowMappers.EmployeeRowMapper;
 import org.example.projectplanningapp.repositories.rowMappers.TaskRowMapper;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.jdbc.support.GeneratedKeyHolder;
@@ -14,6 +16,7 @@ import java.util.List;
 
 @Repository
 public class TaskRepository {
+
     private final JdbcTemplate jdbc;
     private final TaskRowMapper taskRowMapper = new TaskRowMapper();
 
@@ -22,100 +25,118 @@ public class TaskRepository {
     }
 
     public void createTask(Task task) {
-        //Keyholder oprettes til at gemme TaksId
-        KeyHolder keyholder = new GeneratedKeyHolder();
+        KeyHolder keyHolder = new GeneratedKeyHolder();
 
-        //Lambda funktion til at skrive til databasen
         jdbc.update(connection -> {
             PreparedStatement ps = connection.prepareStatement(
                     "INSERT INTO Task (" +
-                            "title, description, status," +
-                            "estimatedHours, actualHours, deadline," +
-                            "parentProject, parentTask, subTasks," +
-                            "assignedEmployees) " +
-                            "VALUES (?,?,?,?,?,?,?,?,?,?)",
+                            "projectId, parentTaskId, title, description, status, " +
+                            "estimatedHours, actualHours, deadline) " +
+                            "VALUES (?,?,?,?,?,?,?,?)",
                     PreparedStatement.RETURN_GENERATED_KEYS);
-            ps.setString(1, task.getTitle());
-            ps.setString(2, task.getDescription());
-            ps.setObject(3, task.getStatus());
-            ps.setInt(4, task.getEstimatedHours());
-            ps.setInt(5, task.getActualHours());
-            ps.setObject(6, task.getDeadline());
-            ps.setObject(7, task.getParentProject());
-            ps.setObject(8, task.getParentTask());
-            ps.setObject(9, task.getSubTasks());
-            ps.setObject(10, task.getAssignedEmployees());
-            return ps;
-        }, keyholder);
 
-        Number id = keyholder.getKey();
-        if (id != null) {
-            //LAST_INSERT_ID() bruges ikke, da det er MySQL afhængigt
-            task.setId(id.intValue());
+            ps.setInt(1, task.getProjectId());
+            ps.setObject(2, task.getParentTaskId() != null ? task.getParentTaskId() : null, java.sql.Types.INTEGER);
+            ps.setString(3, task.getTitle() != null ? task.getTitle() : "New Task");
+            ps.setString(4, task.getDescription());
+            ps.setString(5, task.getStatus() != null ? task.getStatus().name() : Status.TODO.name());
+            ps.setObject(6, task.getEstimatedHours(), java.sql.Types.INTEGER);
+            ps.setObject(7, task.getActualHours(), java.sql.Types.INTEGER);
+            ps.setTimestamp(8, task.getDeadline() != null ? java.sql.Timestamp.valueOf(task.getDeadline()) : null);
+
+            return ps;
+        }, keyHolder);
+
+        Number taskId = keyHolder.getKey();
+        if (taskId != null) {
+            task.setTaskId(taskId.intValue());
         }
     }
-    //READS METHODS
 
-    public List<Task> getAllTasks(){
-        List <Task> tasks = jdbc.query("SELECT * FROM task",taskRowMapper);
-        return tasks.isEmpty() ? Collections.emptyList() : tasks;
-    }
-
-    public Task getTaskFromId (int taskId){
+    public Task getTaskFromId(int taskId) {
         String sql = "SELECT * FROM Task WHERE taskId = ?";
-        List<Task> tasks = jdbc.query(sql,taskRowMapper,taskId);
-        return tasks.isEmpty() ? null : tasks.getFirst();
+        List<Task> tasks = jdbc.query(sql, taskRowMapper, taskId);
+        return tasks.isEmpty() ? null : tasks.get(0);
     }
 
-    public List<Task> getTasksInProject (int projectId){
+    public List<Task> getTasksInProject(int projectId) {
         String sql = "SELECT * FROM Task WHERE projectId = ?";
-        List<Task> tasks = jdbc.query(sql,taskRowMapper,projectId);
+        List<Task> tasks = jdbc.query(sql, taskRowMapper, projectId);
         return tasks.isEmpty() ? Collections.emptyList() : tasks;
     }
 
-    public List<Task> getAssignedTasksForEmployee (int employeeId) {
-        String sql = "SELECT * FROM Task WHERE employeeId = ?";
-        List<Task> list = jdbc.query(sql, taskRowMapper, employeeId);
-        return list.isEmpty() ? Collections.emptyList() : list;
-    }
-
-    //UPDATE METHOD
     public void updateTask(Task task) {
-        String sql = "UPDATE Task SET " +
-                "title = ?, " +
-                "description = ?, " +
-                "status = ?, " +
-                "estimatedHours = ?, " +
-                "actualHours = ?, " +
-                "deadline = ?, " +
-                "parentProject = ?, " +
-                "parentTask = ?, " +
-                "subTasks = ?, " +
-                "assignedEmployees = ? " +
-                "WHERE taskId = ?";
+        String sql = "UPDATE Task SET projectId=?, parentTaskId=?, title=?, description=?, " +
+                "status=?, estimatedHours=?, actualHours=?, deadline=? WHERE taskId=?";
 
         jdbc.update(sql,
-                task.getTitle(),
+                task.getProjectId(),
+                task.getParentTaskId(),
+                task.getTitle() != null ? task.getTitle() : "New Task",
                 task.getDescription(),
-                task.getStatus(),
+                task.getStatus() != null ? task.getStatus().name() : Status.TODO.name(),
                 task.getEstimatedHours(),
                 task.getActualHours(),
                 task.getDeadline(),
-                task.getParentProject(),
-                task.getParentTask(),
-                task.getSubTasks(),
-                task.getAssignedEmployees(),
-                task.getId()
+                task.getTaskId()
         );
     }
 
-    public void deleteTask (int taskId){
+    public void removeAllAssignedEmployeesFromTask(int taskId) {
+        String sql = "DELETE FROM TaskEmployee WHERE taskId = ?";
+        jdbc.update(sql, taskId);
+    }
+
+    public List<Task> getSubTasks(int parentTaskId) {
+        String sql = "SELECT * FROM Task WHERE parentTaskId = ?";
+        List<Task> tasks = jdbc.query(sql, taskRowMapper, parentTaskId);
+        return tasks.isEmpty() ? Collections.emptyList() : tasks;
+    }
+
+    public void deleteTask(int taskId) {
         String sql = "DELETE FROM Task WHERE taskId = ?";
-        jdbc.update(sql,taskId);
+        jdbc.update(sql, taskId);
+    }
+
+    public List<Task> getAssignedTasksForEmployee(int employeeId) {
+        String sql = "SELECT * FROM TaskEmployee WHERE employeeId = ?";
+        List<Task> tasks = jdbc.query(sql, taskRowMapper, employeeId);
+        return tasks.isEmpty() ? Collections.emptyList() : tasks;
+    }
+
+    // Add employee to a task
+    public void assignEmployeeToTask(int taskId, int employeeId) {
+        String sql = "INSERT IGNORE INTO TaskEmployee (taskId, employeeId) VALUES (?, ?)";
+        jdbc.update(sql, taskId, employeeId);
+    }
+
+    // Remove employee from a task
+    public void removeEmployeeFromTask(int taskId, int employeeId) {
+        String sql = "DELETE FROM TaskEmployee WHERE taskId = ? AND employeeId = ?";
+        jdbc.update(sql, taskId, employeeId);
     }
 
 
+    public List<Employee> getAssignedEmployeesForTask(int taskId) {
+        String sql = """
+        SELECT e.*
+        FROM Employee e
+        INNER JOIN TaskEmployee te ON e.employeeId = te.employeeId
+        WHERE te.taskId = ?
+    """;
 
+        return jdbc.query(sql, new EmployeeRowMapper(), taskId);
+    }
 
+    public List<Task> getRootTasks(int projectId) {
+        String sql = """
+                SELECT *
+                FROM Task
+                WHERE projectId = ?
+                AND parentTaskId IS NULL
+                ORDER BY deadline ASC
+                """;
 
+        return jdbc.query(sql,taskRowMapper,projectId);
+    }
 }
